# pixelboost

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  FindFBX.cmake  LICENSE  README.md  build.cmake  config.cmake  launchtools.sh  makeprojects.sh  rakefile
engine/: .gitignore  CMakeLists.txt
engine/resources/data/schema/: main.txt
engine/resources/platform/android/: AndroidManifest_debug.xml  AndroidManifest_release.xml  custom_rules.xml
engine/resources/platform/ios/: Info.plist.in  pixelboostViewController.xib
engine/resources/platform/osx/: Info.plist.in  MainMenu.xib
engine/resources/shaders/: pb_textured.shs
engine/src/common/pixelboost/animation/component/: timeline.cpp  timeline.h
engine/src/common/pixelboost/animation/easing/: ease.cpp  ease.h
engine/src/common/pixelboost/animation/message/: timeline.cpp  timeline.h
engine/src/common/pixelboost/animation/timeline/: curve.cpp  curve.h  element.cpp  element.h  function.cpp  function.h  simpleSound.cpp  simpleSound.h  timeline.cpp  timeline.h  tween.cpp  tween.h  tween.inl
engine/src/common/pixelboost/audio/: audioManagerSimple.h
engine/src/common/pixelboost/data/: stringHelpers.h
engine/src/common/pixelboost/data/resources/: svgResource.cpp  svgResource.h  xmlResource.cpp  xmlResource.h
engine/src/common/pixelboost/db/: database.cpp  database.h  entity.cpp  entity.h  record.cpp  record.h  register.h  struct.cpp  struct.h  struct.inl
engine/src/common/pixelboost/db/types/: common.h  components.cpp  components.h  register.cpp
engine/src/common/pixelboost/debug/: assert.cpp  assert.h  debugDatabaseHandler.cpp  debugVariable.h  debugVariableManager.cpp  log.cpp  log.h
engine/src/common/pixelboost/file/: fileHelpers.h  fileSystem.cpp  fileSystem.h
engine/src/common/pixelboost/framework/: definitions.h  engine.cpp  engine.h  screen.cpp  screen.h
engine/src/common/pixelboost/graphics/camera/: camera.cpp  camera.h  viewport.cpp  viewport.h
engine/src/common/pixelboost/graphics/component/: curve.cpp  curve.h
engine/src/common/pixelboost/graphics/device/: device.cpp  device.h  indexBuffer.h  program.h  texture.cpp  texture.h  vertexBuffer.h
engine/src/common/pixelboost/graphics/material/: material.cpp  material.h
engine/src/common/pixelboost/graphics/message/: color.cpp  color.h
engine/src/common/pixelboost/graphics/particle/: particleSystem.cpp  particleSystem.h
engine/src/common/pixelboost/graphics/resources/: materialResource.cpp  materialResource.h  modelResource.cpp  modelResource.h  shaderResource.cpp  shaderResource.h  spriteSheetResource.cpp  textureResource.cpp
engine/src/common/pixelboost/graphics/shader/: shader.cpp  shader.h
engine/src/common/pixelboost/input/: acceleratometerManager.cpp  acceleratometerManager.h  inputManager.cpp  keyboardManager.h  mouseManager.cpp  mouseManager.h
engine/src/common/pixelboost/logic/: component.cpp  component.h  entity.cpp  entity.h  entity.inl  message.inl  scene.cpp
engine/src/common/pixelboost/logic/component/: script.cpp  transform.cpp  transform.h
engine/src/common/pixelboost/logic/message/: transform.cpp  transform.h
engine/src/common/pixelboost/maths/: hermiteCurve.cpp  hermiteCurve.h  plane.cpp  plane.h  ray.cpp  ray.h
engine/src/common/pixelboost/misc/: stringHelpers.h
engine/src/common/pixelboost/network/: networkHelpers.h  networkMessage.cpp  networkMessage.h  networkServer.h
engine/src/common/pixelboost/network/http/: httpHelpers.cpp  httpHelpers.h  httpServer.h
engine/src/common/pixelboost/physics/2d/: helpers.cpp
engine/src/common/pixelboost/resource/: resource.cpp  resource.h  resourceManager.cpp  resourceManager.h  resourceSet.cpp  resourceSet.h  resourceSet.inl
engine/src/common/pixelboost/scripting/: lua.cpp  lua.h
engine/src/common/pixelboost/store/: store.cpp  store.h
engine/src/common/pixelboost/util/localisation/: localisation.cpp
engine/src/platform/android/pixelboost/framework/: main.cpp
engine/src/platform/android/pixelboost/misc/: jni.cpp  jni.h
engine/src/platform/android/pixelboost/network/: gameCenter.cpp
engine/src/platform/emscripten/pixelboost/file/: fileHelpers.cpp
engine/src/platform/emscripten/pixelboost/framework/: eglUtil.c  eglUtil.h  main.cpp
engine/src/platform/emscripten/pixelboost/network/: gameCenter.cpp  gameCenter.h  networkHelpers.cpp
engine/src/platform/ios/pixelboost/file/: fileHelpers.mm
engine/src/platform/ios/pixelboost/framework/: EAGLView.h  pixelboostAppDelegate.mm  pixelboostViewController.mm
engine/src/platform/ios/pixelboost/network/: gameCenter.h  gameCenter.mm  networkHelpers.mm
engine/src/platform/mac/pixelboost/file/: fileHelpers.mm
engine/src/platform/mac/pixelboost/framework/: AppDelegate.mm  MainView.h  MainView.mm
engine/tools/: rakefile
engine/tools/svgparser/source/: svgParser.cpp
shared/: CMakeLists.txt
shared/src/shared/pixelboost/asset/: model.h
shared/src/shared/pixelboost/maths/: boundingBox.cpp  boundingBox.h  boundingFrustum.h  boundingSphere.cpp  hermiteCurve.cpp  matrixHelpers.h
tools/editor/: CMakeLists.txt  config.cmake
tools/editor/source/: core.cpp  view.cpp  view.h
tools/editor/source/command/: manager.h
tools/editor/source/command/standard/: checkDepth.cpp  checkDepth.h  close.cpp  createEntity.cpp  deleteCommand.h  export.cpp  selectCommand.h
tools/editor/source/core/: selection.h  uidHelpers.cpp  uidHelpers.h
tools/editor/source/project/: definitions.h  entity.cpp  project.cpp  project.h  property.cpp  property.h  record.cpp  record.h  schema.cpp  schema.h  schemaParser.cpp  schemaParser.h  struct.cpp
tools/editor/source/view/entity/: entity.cpp  entity.h
tools/editor/source/view/manipulator/: create.cpp  create.h  manipulator.cpp  manipulator.h  move.cpp  move.h  rotate.cpp  rotate.h  scale.cpp  scale.h  select.cpp  select.h
tools/editor/source/view/ui/: editor.cpp  editor.h  property.cpp  property.h
tools/shadertool/: .gitignore  CMakeLists.txt
tools/shadertool/source/: main.cpp
tools/texturetool/: .gitignore  CMakeLists.txt
tools/texturetool/source/: main.cpp
(+991 files in other folders)
